force-app/main/default/objects/EndpointService__mdt/EndpointService__mdt.object-meta.xml
<CustomObject>
    <description>Service for endpoints.</description>
    <label>Endpoint service</label>
    <pluralLabel>Endpoint services</pluralLabel>
</CustomObject>