force-app/main/default/objects/EndpointService__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>The path refer to this endpoint.</description>
    <inlineHelpText>The path refer to this endpoint.</inlineHelpText>
    <label>Endpoint</label>
    <referenceTo>Endpoint__mdt</referenceTo>
    <relationshipLabel>Endpoint services</relationshipLabel>
    <relationshipName>EndpointServices</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>