force-app/main/default/objects/EndpointService__mdt/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <description>Path for the current service.</description>
    <inlineHelpText>Path for the current service.</inlineHelpText>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>