force-app/main/default/objects/EndpointService__mdt/fields/TypeRequest__c.field-meta.xml
<CustomField>
    <fullName>TypeRequest__c</fullName>
    <description>Represent what will be the type of the request, like: GET, POST, PATH, UPDATE, DELETE.</description>
    <inlineHelpText>Represent what will be the type of the request, like: GET, POST, PATH, UPDATE, DELETE.</inlineHelpText>
    <label>Type of request</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
                <default>true</default>
                <label>GET</label>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>